# SSH-Monitor

./: .gitignore  LICENSE  README.md  docker-compose.yml
cpp-parser/: CMakeLists.txt  Dockerfile  ssh_parser
cpp-parser/include/: parser.h
cpp-parser/src/: main.cpp
grafana/provisioning/dashboards/: dashboard.yml  ssh_monitoring.json
grafana/provisioning/datasources/: datasource.yml
prometheus/: alert_rules.yml  prometheus.yml
python-exporter/: Dockerfile  exporter.py
scripts/: build-parser.sh  launch-parser.sh  simulate_attack.sh
shared/: .gitkeep
